--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Picture Quiz</h1>
   <div class="quiz">
-    <img src="image/TV1Q1234.jpg" alt="Quiz Image" width="300" />
+    <img src="Image/TV1Q1234.jpg" alt="Quiz Image" width="300" />
     <p>What is shown in the picture?</p>
     <input type="text" id="answer" placeholder="Type your answer" />
     <button onclick="checkAnswer()">Submit</button>
