--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Picture Quiz</title>
+  <title>12-Picture Quiz</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Picture Quiz</h1>
-  <div class="quiz">
-    <img src="Image/TV1Q1234.jpg" alt="Quiz Image" width="300" />
-    <p>What is shown in the picture?</p>
-    <input type="text" id="answer" placeholder="Type your answer" />
-    <button onclick="checkAnswer()">Submit</button>
-    <p id="feedback"></p>
+  <h1>12-Picture Quiz</h1>
+  <div class="grid-container">
+    <!-- Each item has an image, input, button, and feedback -->
+    <!-- We'll generate these via JavaScript -->
   </div>
   <script src="script.js"></script>
 </body>
