--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>12-Picture Quiz</h1>
+  <h1>Tricky Television 1</h1>
   <div class="grid-container">
     <!-- Each item has an image, input, button, and feedback -->
     <!-- We'll generate these via JavaScript -->
